# course2knowledge-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
apps/feishu-lite/: README.md
apps/web/: README.md  server.py
apps/web/static/: app.js  index.html  styles.css
data/course-store/courses/course_e4af83f2c407/: bookmarks.json  course.json  course_e4af83f2c407_lecture_001.segments.json  course_e4af83f2c407_lecture_002.segments.json  course_e4af83f2c407_lecture_005.segments.json  knowledge_cards.json  lectures.json  notes.json  reading_progress.json  visual_evidence.json
data/course-store/imports/: import_course_e4af83f2c407.json
docs/: 404.html  ARCHITECTURE.md  BILIBILI_IMPORT.md  CLEAN_DEPLOY_SMOKE.md  DATA_MODEL.md  DEMO_PRIVACY.md  DEMO_VIDEO.md  DEPLOYMENT.md  DEPLOYMENT_FAQ.md  FEISHU_LITE.md  PRODUCT_BOUNDARY.md  SHOWCASE_SHOT_LIST.md  SITE_MAP.md  TECHNICAL_WHITEPAPER.md  TESTING.md  WEB_LITE.md  _config.yml  index.html  site.css  site.js
docs/_layouts/: technical.html
examples/sample-course/: README.md
hermes/: README.md
hermes/plugins/course2knowledge-lite/: __init__.py  plugin.yaml  runtime.py  tools.py
hermes/profile-template/: SOUL.md  config.overlay.yaml
hermes/profile-template/workspace/: AGENTS.md
scripts/: Course2KnowledgeLiteSandbox.wsb  backfill_chinese_lesson_dossiers.py  backfill_visual_keyframe_status.py  deploy_interaction_smoke.py  deploy_smoke_windows.ps1  migrate_lite_course_store_to_sqlite.py  run_inside_sandbox.ps1  run_sandbox_smoke.ps1  smoke_hermes_lite_profile.py  sync_hermes_lite_profile.py
src/: course2knowledge_lite_cli.py
src/course2knowledge_lite/: __init__.py  cli.py
src/public_release/: __init__.py  course2knowledge_lite_apps_web_server.py  course2knowledge_lite_deploy_interaction_smoke.py  course2knowledge_lite_smoke_hermes_profile.py  course2knowledge_lite_sync_hermes_profile.py  runtime_paths.py
tests/: README.md  test_bilibili_collection.py  test_bilibili_transcripts.py  test_course_store_skeleton.py  test_deployment.py  test_guidance.py  test_hermes_lite_plugin.py  test_hermes_lite_profile.py  test_lite_chat_core.py  test_lite_multimodal.py  test_qa.py  test_web_lite.py
